<resources>
    <string name="app_name">Donate2Save</string>
    <string name="time_extend">Time extend</string>
    <string name="title_name">Name of the product</string>
    <string name="submit">Submit</string>
    <string name="example_title">Example apple banana</string>
    <string name="description">des</string>
    <string name="auto_fill_hint">Fill something</string>
    <array name="expire">
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12"</item>
        <item>"13"</item>
        <item>"14"</item>
        <item>"15"</item>
        <item>"16"</item>
        <item>"17"</item>
        <item>"18"</item>
        <item>"19"</item>
        <item>"20"</item>
    </array>
    <string-array name="tag">
        <item>Food</item>
        <item>Plastic</item>
        <item>Household</item>
        <item>Others</item>
    </string-array>

    <string name="upload_btn">Upload</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_link_to_register">Not a member? Get registered to Ladybug now!</string>
    <string name="btn_link_to_login">Already registered. Login now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="address">Address</string>


    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>

    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_info">Learn about us</string>
    <string name="action_message">Message</string>

    <string name="Name">You are offline</string>
    <string name="Reference">CEO of D2S - nhttuan@apcs.vn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="full_name">Full Name</string>
    <string name="details">Thông tin ngắn của bạn (tùy chọn)</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>

    <string name="title_activity_maps">Map</string>
    <string name="todo">TODO</string>

    <string name="home">Home</string>
    <string name="achievement">Achievement</string>
    <string name="Import">Import</string>
    <string name="Smart">Smart Import</string>

    <string name="notification">Notification</string>
    <string name="organization">My Organization</string>
    <string name="donate_map">Donate Map</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="tools">Tools</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>

    <string name="import_description">Description…</string>
    <string name="import_upload">Upload</string>
    <string name="import_photo">Camera</string>
    <string name="import_expire">Exp:</string>
    <string name="import_tag">Type:</string>
    <string name="import_pickup">Address… (Optional)</string>
    <string name="import_contact">Contact number… (Optional)</string>
    <string name="submit_import">Submit</string>

    <string name="member_add">ADD A MEMBER</string>
    <string name="type_a_message">Type a message</string>
    <string name="title_itemname">Title/name…</string>

    <string name="fcm_token">FCM Token: %s</string>
    <string name="pick_a_place">Pick a place...</string>
    <string name="get_your_location">Get your location...</string>
    <string name="search_for_a_place">Search for a place...</string>
    <string name="show">Show:</string>
    <string name="display">Display</string>

    <string name="camera_error">Camera not support</string>
</resources>
