<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Import" />
        <item
            android:id="@+id/nav_ntification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_organization"
            android:icon="@drawable/ic_organization"
            android:title="@string/organization" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/donate_map" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>
    <item android:title="@string/tools">
        <menu>
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_log_out"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>
