<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearlayout0"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/image_id"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <TextView
            android:id="@+id/title_name"
            app:layout_constraintBottom_toBottomOf="@id/image_id"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/title_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/title"
            android:hint="@string/example_title"
            app:layout_constraintBottom_toBottomOf="@id/title_name"
            android:layout_width="250dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/time_extend"
            app:layout_constraintBottom_toBottomOf="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/time_extend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Spinner
            android:id="@+id/spinner_extend"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@id/time_extend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:spinnerMode="dialog"
            />
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"


            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>